Finished scenarios and functional requirements.

--- a/hw1/questions/question_1.tex
+++ b/hw1/questions/question_1.tex
@@ -11,3 +11,10 @@
 % Therefore, OIT would like to have a web application developed that
 % can automate the majority of this process to free up developer
 % time.
+
+Outline:
+\begin{itemize}
+    \item Context
+    \item Problem
+    \item Solution
+\end{itemize}
