--- a/hw1/questions/question_2.tex
+++ b/hw1/questions/question_2.tex
@@ -1,3 +1,22 @@
 % EXAMPLE
 % 2.  Scenarios
-% Using the dynamic registration form application, the event organizer can select the information fields that correspond with the desired data to be collected. The user will be given ability to create custom questions in the case that additional, non-standardized data is desired. Also, mechanisms will be put in place to allow payments to be processed through the University's QuickPay system. A system must exist to notify organizer of new registrations, and allow for registrant confirmation. In addition, the user will be able to edit registrant information and update offline payment information via an administrative panel.
+% Using the dynamic registration form application, the event
+% organizer can select the information fields that correspond with
+% the desired data to be collected. The user will be given ability
+% to create custom questions in the case that additional,
+% non-standardized data is desired. Also, mechanisms will be put in
+% place to allow payments to be processed through the University's
+% QuickPay system. A system must exist to notify organizer of new
+% registrations, and allow for registrant confirmation. In addition,
+% the user will be able to edit registrant information and update
+% offline payment information via an administrative
+% panel.
+Downloading the game, the user can navigate through the menu to
+begin a new game, view statistics, and adjust settings.  If the
+user begins a new game, they are dropped in a scene and immediately
+are accosted by white enemies.  The user's weapon can fire white
+lasers.  Once the user has dispatched the enemies, a new swarm arrives.
+These enemies, though, may be of a different color, or may be
+mixed with the previous color.  The user will have to switch
+between colors to dispatch like-colored enemies.  From time to time,
+the user may find a power-up that will help them to live longer.
