--- a/hw1/questions/question_3.tex
+++ b/hw1/questions/question_3.tex
@@ -6,3 +6,12 @@
 % •	Email confirmation of new registration to event organizer
 % •	Application should integrate with QuickPay system
 % •	Site should require login id and password for administrative access
+\begin{itemize}
+    \item The player can navigate a menu to start a new game.
+    \item The player can navigate a menu to view highest statistics.
+    \item The player can begin a new game.
+    \item The player can fire a weapon with different color lasers.
+    \item The player can kill an enemy with a like-colored laser.
+    \item The player can lose health if an enemy reaches/attacks them.
+    \item The player can die if they lose all of their health.
+\end{itemize}
