Added non-functional requirements

--- a/hw1/questions/question_4.tex
+++ b/hw1/questions/question_4.tex
@@ -6,3 +6,9 @@
 % •	The system should allow for many concurrent connections
 % •	The system should be highly available, dependent on OIT schedule windows
 % •	The system should be secure enough to prevent the loss or exposure of sensitive personal/financial information of registrants
+\begin{itemize}
+    \item The menu should be simple for the user to navigate.
+    \item The game should run fast (fast enough not to be aggravating.)
+    \item The enemies should clearly display their color.
+    \item The controls should be simple for the player to learn.
+\end{itemize}
