Finished target environment and deliverables

--- a/hw1/hw1.tex
+++ b/hw1/hw1.tex
@@ -1,5 +1,16 @@
 \documentclass[a4paper,12pt]{article}
-\author{Meagon Gleason, James Justice, Keefer Maresh, Brad Goodall, Terrence Reilly}
+\author{
+    % Add your name here!
+    Reilly, Terrence\
+    \and
+    LastName1, FirstName1\
+    \and
+    LastName2, FirstName2\
+    \and
+    LastName3, FirstName3\
+    \and
+    LastName4, FirstName4\
+}
 \title{Homework 1}
 
 \usepackage{amsmath}
