--- a/hw1/questions/question_5.tex
+++ b/hw1/questions/question_5.tex
@@ -1,6 +1,16 @@
 % EXAMPLE
 % 5.  Target Environment
-% •	Users should be able to access web application, and corresponding sites via major web browsers (IE, Firefox, Chrome, Safari, etc.)
+% •	Users should be able to access web application, and
+%       corresponding sites via major web browsers (IE, Firefox,
+%       Chrome, Safari, etc.)
 % •	The server will be running a flavor of MS Server
 % •	All databases will be MS SQL
-% •	Development language used will be C#, in accordance with OIT's standards documentation
+% •	Development language used will be C#, in accordance with OIT's
+%       standards documentation
+\begin{itemize}
+    \item The user should be able to play the game if they
+    have Python installed.
+    \item The game will run using Python3.6, which will also be
+    the development language.
+    \item The game will use the framework, Pygame.
+\end{itemize}
