--- a/hw1/questions/question_6.tex
+++ b/hw1/questions/question_6.tex
@@ -3,3 +3,9 @@
 % •	Overall design of the system will be due __________
 % •	User interface will be due for user testing ___________
 % •	System maintenance/instruction manual will be delivered on __________
+\begin{itemize}
+    \item The over-arching design of the game will be due on ...
+    \item The menu will be complete for user testing on ...
+    \item The game interface will be complete for user testing on ...
+    \item An README with installation instructions will be done on ...
+\end{itemize}
