Finished problem domain

--- a/hw1/hw1.tex
+++ b/hw1/hw1.tex
@@ -18,6 +18,7 @@
 \usepackage{graphicx}
 \setkeys{Gin}{width=\linewidth}
 \usepackage[margin=1.0in]{geometry}
+\def\code#1{\texttt{#1}}
 
 \begin{document}
     \maketitle
