--- a/hw1/questions/question_1.tex
+++ b/hw1/questions/question_1.tex
@@ -12,9 +12,12 @@
 % can automate the majority of this process to free up developer
 % time.
 
-Outline:
-\begin{itemize}
-    \item Context
-    \item Problem
-    \item Solution
-\end{itemize}
+Pygame is an open-source framework for creating games.  Games written
+with Pygame generally run on a full desktop environment, but can be
+configured (through libraries such as \code{pygame\_sdl2}) to run on Android
+devices.
+
+However, Pygame has not seen widespread adoption.  One area in which
+Pygame could excel is in games which are suitable for children.  A simple,
+easy-to-learn, and fast-paced game could easily be written for Pygame
+to help increase its fanbase.
