Added name to paper.

--- a/hw1/hw1.tex
+++ b/hw1/hw1.tex
@@ -3,7 +3,7 @@
     % Add your name here!
     Reilly, Terrence\
     \and
-    LastName1, FirstName1\
+    Justice, James\
     \and
     LastName2, FirstName2\
     \and
