--- a/hw1/hw1.tex
+++ b/hw1/hw1.tex
@@ -5,7 +5,7 @@
     \and
     Justice, James\
     \and
-    LastName2, FirstName2\
+    Goodall, Brad\
     \and
     LastName3, FirstName3\
     \and
