--- a/hw1/hw1.tex
+++ b/hw1/hw1.tex
@@ -1,5 +1,5 @@
 \documentclass[a4paper,12pt]{article}
-\author{Meagon Gleason, James Justice, Keefer Maresh, Brad Goodall, Terrence Reilly}
+\author{James Justice, Keefer Maresh, Brad Goodall, Terrence Reilly, Meagon Gleason}
 \title{Homework 1}
 
 \usepackage{amsmath}
