Added section titles

--- a/hw2/src/hw2.tex
+++ b/hw2/src/hw2.tex
@@ -1,5 +1,15 @@
 \documentclass[a4paper,12pt]{article}
-\author{Terrence Reilly}
+\author{
+    Reilly, Terrence\
+    \and
+    Justice, James\
+    \and
+    Goodall, Brad\
+    \and
+    Maresh, Keefer\
+    \and
+    Gleason, Meagon\
+}
 \title{Homework 2}
 
 \usepackage{amsmath}
@@ -12,25 +22,25 @@
 \begin{document}
     \maketitle
 
-    \section*{Question 1}
+    \section*{System Overview}
         \input{questions/question_1}
 
-    \section*{Question 2}
+    \section*{User Interfaces}
         \input{questions/question_2}
 
-    \section*{Question 3}
+    \section*{Functional and Non-functional Descriptions}
         \input{questions/question_3}
 
-    \section*{Question 4}
+    \section*{Performance Description}
         \input{questions/question_4}
 
-    \section*{Question 5}
+    \section*{Exception Handling}
         \input{questions/question_5}
 
-    \section*{Question 6}
+    \section*{Acceptance Criteria}
         \input{questions/question_6}
 
-    \section*{Question 7}
+    \section*{Appendix}
         \input{questions/question_7}
 
 \end{document}
