Added directory for the game: lazer_blast

--- a/hw2/src/hw2.tex
+++ b/hw2/src/hw2.tex
@@ -22,21 +22,27 @@
 \begin{document}
     \maketitle
 
+    % Meagon
     \section*{System Overview}
         \input{questions/question_1}
 
+    % Keefer
     \section*{User Interfaces}
         \input{questions/question_2}
 
+    % Terrence
     \section*{Functional and Non-functional Descriptions}
         \input{questions/question_3}
 
+    % Brad
     \section*{Performance Description}
         \input{questions/question_4}
 
+    % James
     \section*{Exception Handling}
         \input{questions/question_5}
 
+    % Terrence
     \section*{Acceptance Criteria}
         \input{questions/question_6}
 
