Finished functional/non-functional requirements

--- a/hw2/src/questions/question_3.tex
+++ b/hw2/src/questions/question_3.tex
@@ -1,1 +1,25 @@
 % Chapter 4	Functional and Nonfunctional Descriptions
+\subsection*{Functional Requirements}
+\begin{itemize}
+    % Menu
+    \item The user can navigate the menu to begin a new game.
+    \item The user can navigate the menu to quit the game.
+    \item The user can navigate the menu to see game statistics.
+    % Gameplay
+    \item The user can fire a laser at enemies.
+    \item The user can move about their environment.
+    \item The user can only use like-colored lasers to damage an enemy.
+\end{itemize}
+
+\subsection*{Non-functional Requirements}
+\begin{itemize}
+    % Menu
+    \item The menu items are legible and easy to follow.
+    \item The color schemes for the menu complement those of the game.
+    % Gameplay
+    \item The user's weapons are fast enough to allow enjoyable gameplay.
+    \item The user's movements are easy to control through the keyboard,
+          with related controls not too far apart from one another.
+    \item The colors of the different weapons are easily distinguishable.
+    \item It is easy for the user to tell what color the enemies are.
+\end{itemize}
