Finished acceptance criteria

--- a/hw2/src/questions/question_6.tex
+++ b/hw2/src/questions/question_6.tex
@@ -1,1 +1,40 @@
 % Chapter 7	Acceptance Criteria
+The criteria for acceptance of the project will proceed in stages.
+A prototype of Lazer Blast will first be produced.  For acceptance,
+the following criteria must be met:
+
+\begin{itemize}
+    % Menu
+    \item A new user can begin a new game after looking at the menu
+          for less than 1 minute.
+    \item A new user can quit the game after looking at the menu
+          for less than 1 minute.
+
+    % Gameplay
+    \item The user can fire upon an enemy.
+    \item The user can navigate around their environment.
+\end{itemize}
+
+Once the prototype has been accepted, the final acceptance criteria
+will include all the previous criteria as well as the following:
+
+\begin{itemize}
+    % Menu
+    \item There is a main menu with the following items:
+    \begin{itemize}
+        \item New Game
+        \item Statistics
+        \item Quit
+    \end{itemize}
+    \item A new user can read all items in the menu.
+    \item The colors in the menu have the same theme as those of the game.
+
+    % Gameplay
+    \item Firing a dissimilar laser at an enemy does no damage.
+    \item The weapon, when fired, reaches the enemy faster than they can move away.
+    \item The keys for movement are all within one hand's distance, as are the
+          keys for using weapons.
+    \item A new user can tell the difference between the different laser colors. (That
+          is, the contrast is high enough for the average player.)
+    \item A new user can tell which laser color is necessary for a given enemy.
+\end{itemize}
