--- a/hw2/src/hw2.bib
+++ b/hw2/src/hw2.bib
@@ -1,1 +1,17 @@
-% Citations
+@article{
+    health,
+    title="7 health benefits of playing video games",
+    author="Gallagher, Danny",
+    year="2013 (accessed February 1, 2017)",
+    url = "http://theweek.com/articles/466852/7-health-benefits-playing-video-games",
+    journal = "The Week",
+}
+
+@article{
+    reaction,
+    title="Video games speed up reaction time",
+    author="Blank-Rochester, Alan",
+    year="2013 (accessed February 1, 2017)",
+    url="http://www.futurity.org/video-games-speed-up-reaction-time/",
+    journal="Futurity",
+}
