--- a/hw2/src/hw2.tex
+++ b/hw2/src/hw2.tex
@@ -20,6 +20,7 @@
 \usepackage[margin=1.0in]{geometry}
 
 \begin{document}
+    \nocite{*}
     \maketitle
 
     % Meagon
@@ -45,6 +46,9 @@
     % Terrence
     \section*{Acceptance Criteria}
         \input{questions/question_6}
+
+    \bibliographystyle{plain}
+    \bibliography{hw2}
 
     \section*{Appendix}
         \input{questions/question_7}
