--- a/hw2/src/questions/question_1.tex
+++ b/hw2/src/questions/question_1.tex
@@ -1,1 +1,29 @@
 % Chapter 1	System Overview
+The artificial intelligent software which we are working on comes in
+the form of a game. Our game will be developed using the language,
+Python 3.5. This system may be used as a way to improve one’s
+cognitive and motor skills or it may be used as a way to relieve
+stress or even just to provide enjoyment.
+
+This game will work in improving ones cognitive and motor skills
+through requiring the individual to focus on the different colors of
+the enemy ships which will only take damage should the individual
+also be quick to choose the correct color prior to initiating an
+attack. This process will help the player to improve their focus as
+they are required to pay attention to the colors of each enemy ship,
+improve their reaction time by forcing the player to think quickly
+in which is the appropriate color to provide damage, and therefore
+improve their overall decision making skills. The game will help to
+relieve stress in the sense that the player will have the chance to
+focus any aggressive feelings on the enemy ships within the game and
+will provide satisfaction every time the player gets a hit and takes
+down an enemy ship. Another way which this game will provide stress
+relief and possibly even pain relief is through taking the players
+focus off of whatever it is that is bothering them and placing that
+focus on decisions required in order to win the game.
+
+This product will require that the individual’s computer be able to
+support Python 3.5 and may require the installation of the software,
+Pygame, in order to run the product. Without these requirements in
+place there is no guarantee that this game will run on the users’
+device due to the build of the game.
