--- a/hw3/src/hw3.tex
+++ b/hw3/src/hw3.tex
@@ -3,6 +3,7 @@
 \usepackage{amsmath}
 \usepackage{graphicx}
 \usepackage{minted}
+\usepackage{pdfpages}
 \usepackage[colorlinks=true]{hyperref}
 \setkeys{Gin}{width=\linewidth}
 \usepackage[margin=1.0in]{geometry}
