menu definitions added

--- a/hw3/src/questions/question_3.tex
+++ b/hw3/src/questions/question_3.tex
@@ -36,7 +36,7 @@
 \subsection*{Pseudocode}
     % Pseudo-code for Base Classes (Terrence's Portion)
     \inputminted{python}{../assets/base_classes.py}
-    %Pseudo-code for MainMenu (Keefer's Portion)
+    %Pseudo-code for Menus (Keefer's Portion)
     \inputminted{python}{../assets/menus.py}
 
 \subsection*{Data File Specifications}
