Added options description to menus section

--- a/hw3/src/questions/question_3.tex
+++ b/hw3/src/questions/question_3.tex
@@ -16,7 +16,8 @@
 
     The class \mintinline{python}{MainMenu} is a basis for the User
     Interfaces for LazerBlast. Through it, the user can navigate
-    through and access different parts of the game.
+    through and access different parts of the game, including high
+    scores and control options.
 
     % Meagon's portion
     The GameSound class will release a sound when it receives
@@ -65,7 +66,8 @@
         \item \mintinline{python}{MainMenu} will allow the user to access
         the main game and to view information such as the high scores
         across sessions through options on a menu, such as New Game and
-        High Scores.
+        High Scores. Also allows the user to customize their controls
+        through an options menu.
     \end{itemize}
 
 \subsection*{Pseudocode}
