Edited in EDS Documentation and images

--- a/hw3/src/hw3.tex
+++ b/hw3/src/hw3.tex
@@ -4,6 +4,7 @@
 \usepackage{graphicx}
 \usepackage{minted}
 \usepackage{pdfpages}
+\usepackage[ampersand]{easylist}
 \usepackage[colorlinks=true]{hyperref}
 \setkeys{Gin}{width=\linewidth}
 \usepackage[margin=1.0in]{geometry}
