--- a/hw3/src/questions/question_1.tex
+++ b/hw3/src/questions/question_1.tex
@@ -1,2 +1,30 @@
 % 1. External Design Specifications
 % User displays and report formats if any
+\subsection*{Menu}
+    \begin{easylist}[itemize]
+        & Four buttons (Start game, Options, High Scores, Exit Game)
+        & Simple interface
+        & Potentially game title at top
+    \end{easylist}
+
+    \begin{center}
+        \includegraphics[width=0.5\linewidth]{../images/menu}
+    \end{center}
+
+\subsection*{Game}
+    \begin{easylist}[itemize]
+        & Player sprite
+        && Moves left and right, potentially up and down
+        && Fires laser weapon (green pictured)
+        & Enemy sprites
+        && Move down screen, left and right
+        && White enemy vulnerable to all player weapons
+        && Colored enemies only vulnerable to matching weapon blast
+        & Score
+        & Lives remaining (either number-based or icon-based) on top
+          right (0 remaining in picture.
+    \end{easylist}
+
+    \begin{center}
+        \includegraphics[width=0.5\linewidth]{../images/gameplay}
+    \end{center}
