--- a/hw3/src/questions/question_2.tex
+++ b/hw3/src/questions/question_2.tex
@@ -1,11 +1,12 @@
 % Software Architectural Design Specifications
 % Object models (updated version)
 
-\includegraphics[width=0.75\linewidth]{../images/classes}
-\clearpage
+\begin{center}
+    \includegraphics[width=0.5\linewidth]{../images/classes}
+    \vspace{1in}
 
-\includegraphics[width=0.75\linewidth]{../images/sequence}
-\clearpage
+    \includegraphics[width=0.5\linewidth]{../images/sequence}
+    \vspace{1in}
 
-\includegraphics[width=0.75\linewidth]{../images/use_case}
-\clearpage
+    \includegraphics[width=0.5\linewidth]{../images/use_case}
+\end{center}
